argocd-mcp-vs-and-svc.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-mcp-virtualservice
  namespace: argocd-mcp
spec:
  gateways:
  - istio-system/ingress-global-gateway
  hosts:
  - techlive-sbx.deephealthos.com
  http:
  - match:
    - uri:
        regex: ^/argocd-mcp/auth(/|$)(.*)
    rewrite:
      uriRegexRewrite:
        match: ^/argocd-mcp/auth(/|$)(.*)
        rewrite: /auth/\2
    route:
    - destination:
        host: argocd-mcp
        port:
          number: 8085
  - match:
    - uri:
        regex: ^/argocd-mcp(/|$)(.*)
    rewrite:
      uriRegexRewrite:
        match: ^/argocd-mcp(/|$)(.*)
        rewrite: /\2
    route:
    - destination:
        host: argocd-mcp
        port:
          number: 80
  - match:
    - uri:
        regex: ^/argocd(/|$)(.*)
    rewrite:
      uriRegexRewrite:
        match: ^/argocd(/|$)(.*)
        rewrite: /\2
    route:
    - destination:
        host: argocd-mcp
        port:
          number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-mcp
  namespace: argocd-mcp
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: oauth-callback
    port: 8085
    targetPort: 8085
  selector:
    app: argocd-mcp
