argocd-mcp-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-mcp-virtualservice
  namespace: argocd-mcp
spec:
  gateways:
  - istio-system/ingress-global-gateway
  hosts:
  - techlive-sbx.deephealthos.com
  http:
  - match:
    - uri:
        regex: ^/(argocd|argocd-mcp)(/|$)(.*)
    rewrite:
      uriRegexRewrite:
        match: ^/(argocd|argocd-mcp)(/|$)(.*)
        rewrite: /\3
    route:
    - destination:
        host: argocd-mcp.argocd-mcp.svc.cluster.local
        port:
          number: 80
